fix(ui5-button): make buttons truncate

--- a/packages/main/src/themes/Button.css
+++ b/packages/main/src/themes/Button.css
@@ -17,6 +17,9 @@
 	border: 1px solid var(--sapButton_BorderColor);
 	color: var(--sapButton_TextColor);
 	box-sizing: border-box;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 :host([disabled]) {
@@ -86,6 +89,7 @@
 }
 
 .ui5-button-text {
+	max-width: 100%;
 	outline: none;
 	position: relative;
 	white-space: inherit;
@@ -93,8 +97,13 @@
 	text-overflow: inherit;
 }
 
-:host([has-icon]) .ui5-button-text {
+:host([has-icon]:not([icon-end])) .ui5-button-text {
+	max-width: calc(100% - 1rem);
 	margin-left: var(--_ui5_button_base_icon_margin);
+}
+
+:host([has-icon][icon-end]) .ui5-button-text {
+	margin-left: 0;
 }
 
 :host([disabled]) {
